--- a/desafio/d012/estilo/style.css
+++ b/desafio/d012/estilo/style.css
@@ -1,18 +1,38 @@
 @charset "UTF-8";
- 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fontel1: verdana, Gemeva, Tahoma, sans-serif;
+    --fontel2:  "Passion One", sans-serif;
+    --fontel3: "Sriracha", cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fontel1);
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
 }
 
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fontel2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -34,6 +54,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fontel3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -47,7 +69,8 @@ section.imagens {
 }
 
 section.imagens > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgb(0, 0, 0, 0.253);
 }
 
